--- a/2414100208-黄楚民/第一阶段作业/笔记.md
+++ b/2414100208-黄楚民/第一阶段作业/笔记.md
@@ -8,7 +8,7 @@
 后面发现模拟器启动是要HAXM，但是我却一直安装不了HAXM，一开始那个勾选HAXM一直是无法勾选状态
 在查阅资料时，发现 Google 为 AMD 处理器和部分 Intel 环境提供了替代方案：**AEHD（Android Emulator Hypervisor Driver）**。虽然我的是 Intel CPU，但 AEHD 也能作为 HAXM 的替代。
 后面摸索在SDK Manager → SDK Tools，勾选 **Android Emulator Hypervisor Driver （AEHD）下载完成后，
-进入 SDK 目录下的 `extras\google\Android_Emulator_Hypervisor_Driver` 文件夹右键 `silent_install.bat`，选择 **以管理员身份运行**。 安装成功后重启模拟器，就能正常启动了。
+进入 SDK 目录下的AEHD文件夹右键 `silent_install.bat`，选择 **以管理员身份运行**。 安装成功后重启模拟器，就能正常启动了。
 ---
 ## 二、模拟器运行导致电脑死机
 
